fix: visibily menu-button

--- a/css/style.css
+++ b/css/style.css
@@ -366,12 +366,12 @@ template {
   padding-top: 40px;
   padding-bottom: 40px;
 }
+.navbar-top__menu-button {
+  display: none;
+}
 .navbar__search {
   margin-right: auto;
   margin-left: 108px;
-}
-.navbar__menu-button {
-  display: none;
 }
 .navbar-bottom {
   background-color: #0A223D;
@@ -490,6 +490,7 @@ template {
     display: flex;
     width: 16px;
     height: 11px;
+    padding: 0;
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
